[project]
name = "laserscanning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cerberus>=1.3.8",
    "matplotlib>=3.10.8",
    "nidaqmx>=1.4.1",
    "numpy>=2.4.4",
    "pyperclip>=1.11.0",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
]
